Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten: Fixed the definition of velocity being used in the HLLE solver.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Afield_flux_handwritten.ipynb
@@ -381,7 +381,7 @@
     "                                       const REAL *Blflux_dirn,\n",
     "                                       const REAL *gamma_faceDD00, const REAL *gamma_faceDD01, const REAL *gamma_faceDD02,\n",
     "                                       const REAL *gamma_faceDD11, const REAL *gamma_faceDD12, const REAL *gamma_faceDD22,\n",
-    "                                       const REAL *beta_faceU0, const REAL *alpha,\n",
+    "                                       const REAL *beta_faceU0, const REAL *beta_faceU1, const REAL *alpha_face,\n",
     "                                       REAL *A2_rhs,const REAL SIGN,const int flux_dirn) {\n",
     "    // This function is written to be generic and compute the contribution for all three AD RHSs.\n",
     "    // However, for convenience, the notation used in the function itself is for the contribution\n",
@@ -429,17 +429,20 @@
     "                // Now, we read in memory. We need the x and y components of velocity and magnetic field on both\n",
     "                // the left and right sides of the interface at *both* faces.\n",
     "                // Here, the point (i0,i1,i2) corresponds to the point (i-1/2,j,k)\n",
-    "                const int index            = IDX3S(i0,i1,i2);\n",
-    "                const double Valenciav_rU0 = Vr0[index];\n",
-    "                const double Valenciav_rU1 = Vr1[index];\n",
-    "                const double B_rU0         = Br0[index];\n",
-    "                const double B_rU1         = Br1[index];\n",
-    "                const double B_rflux_dirn  = Brflux_dirn[index];\n",
-    "                const double Valenciav_lU0 = Vl0[index];\n",
-    "                const double Valenciav_lU1 = Vl1[index];\n",
-    "                const double B_lU0         = Bl0[index];\n",
-    "                const double B_lU1         = Bl1[index];\n",
-    "                const double B_lflux_dirn  = Blflux_dirn[index];\n",
+    "                const int index           = IDX3S(i0,i1,i2);\n",
+    "                const double alpha        = alpha_face[index];\n",
+    "                const double betaU0       = beta_faceU0[index];\n",
+    "                const double betaU1       = beta_faceU1[index];\n",
+    "                const double v_rU0        = alpha*Vr0[index]-betaU0;\n",
+    "                const double v_rU1        = alpha*Vr1[index]-betaU1;\n",
+    "                const double B_rU0        = Br0[index];\n",
+    "                const double B_rU1        = Br1[index];\n",
+    "                const double B_rflux_dirn = Brflux_dirn[index];\n",
+    "                const double v_lU0        = alpha*Vl0[index]-betaU0;\n",
+    "                const double v_lU1        = alpha*Vl1[index]-betaU1;\n",
+    "                const double B_lU0        = Bl0[index];\n",
+    "                const double B_lU1        = Bl1[index];\n",
+    "                const double B_lflux_dirn = Blflux_dirn[index];\n",
     "                // We will also need need the square root of the metric determinant here at this point:\n",
     "                const REAL gxx = gamma_faceDD00[index];\n",
     "                const REAL gxy = gamma_faceDD01[index];\n",
@@ -459,17 +462,20 @@
     "                //     algorithm is generalized so that any flux_dirn or velocity/magnetic\n",
     "                //     field component can be computed via permuting the inputs into this\n",
     "                //     function.\n",
-    "                const int indexp1             = IDX3S(i0+(flux_dirn==0),i1+(flux_dirn==1),i2+(flux_dirn==2));\n",
-    "                const double Valenciav_rU0_p1 = Vr0[indexp1];\n",
-    "                const double Valenciav_rU1_p1 = Vr1[indexp1];\n",
-    "                const double B_rU0_p1         = Br0[indexp1];\n",
-    "                const double B_rU1_p1         = Br1[indexp1];\n",
-    "                const double B_rflux_dirn_p1  = Brflux_dirn[indexp1];\n",
-    "                const double Valenciav_lU0_p1 = Vl0[indexp1];\n",
-    "                const double Valenciav_lU1_p1 = Vl1[indexp1];\n",
-    "                const double B_lU0_p1         = Bl0[indexp1];\n",
-    "                const double B_lU1_p1         = Bl1[indexp1];\n",
-    "                const double B_lflux_dirn_p1  = Blflux_dirn[indexp1];\n",
+    "                const int indexp1            = IDX3S(i0+(flux_dirn==0),i1+(flux_dirn==1),i2+(flux_dirn==2));\n",
+    "                const double alpha_p1        = alpha_face[indexp1];\n",
+    "                const double betaU0_p1       = beta_faceU0[indexp1];\n",
+    "                const double betaU1_p1       = beta_faceU1[indexp1];\n",
+    "                const double v_rU0_p1        = alpha_p1*Vr0[indexp1]-betaU0_p1;\n",
+    "                const double v_rU1_p1        = alpha_p1*Vr1[indexp1]-betaU1_p1;\n",
+    "                const double B_rU0_p1        = Br0[indexp1];\n",
+    "                const double B_rU1_p1        = Br1[indexp1];\n",
+    "                const double B_rflux_dirn_p1 = Brflux_dirn[indexp1];\n",
+    "                const double v_lU0_p1        = alpha_p1*Vl0[indexp1]-betaU0_p1;\n",
+    "                const double v_lU1_p1        = alpha_p1*Vl1[indexp1]-betaU1_p1;\n",
+    "                const double B_lU0_p1        = Bl0[indexp1];\n",
+    "                const double B_lU1_p1        = Bl1[indexp1];\n",
+    "                const double B_lflux_dirn_p1 = Blflux_dirn[indexp1];\n",
     "                // We will also need need the square root of the metric determinant here at this point:\n",
     "                const REAL gxx_p1 = gamma_faceDD00[indexp1];\n",
     "                const REAL gxy_p1 = gamma_faceDD01[indexp1];\n",
@@ -477,11 +483,11 @@
     "                const REAL gyy_p1 = gamma_faceDD11[indexp1];\n",
     "                const REAL gyz_p1 = gamma_faceDD12[indexp1];\n",
     "                const REAL gzz_p1 = gamma_faceDD22[indexp1];\n",
-    "                const REAL sqrtgammaDET_p1 = sqrt( gxx*gyy*gzz\n",
-    "                                                -  gxx*gyz*gyz\n",
-    "                                                +2*gxy*gxz*gyz\n",
-    "                                                -  gyy*gxz*gxz\n",
-    "                                                -  gzz*gxy*gxy );\n",
+    "                const REAL sqrtgammaDET_p1 = sqrt( gxx_p1*gyy_p1*gzz_p1\n",
+    "                                                -  gxx_p1*gyz_p1*gyz_p1\n",
+    "                                                +2*gxy_p1*gxz_p1*gyz_p1\n",
+    "                                                -  gyy_p1*gxz_p1*gxz_p1\n",
+    "                                                -  gzz_p1*gxy_p1*gxy_p1 );\n",
     "\n",
     "                // *******************************\n",
     "\n",
@@ -545,8 +551,8 @@
     "                // [F^i(B^j)]_k = \\sqrt{\\gamma} (v^i B^j - v^j B^i)\n",
     "                // Therefore since we want [F_HLL^x(B^y)]_z,\n",
     "                // we will code     (v^x           B^y   - v^y           B^x) on both left and right faces.\n",
-    "                const REAL F0B1_r = sqrtgammaDET*(Valenciav_rU0*B_rU1 - Valenciav_rU1*B_rU0);\n",
-    "                const REAL F0B1_l = sqrtgammaDET*(Valenciav_lU0*B_lU1 - Valenciav_lU1*B_lU0);\n",
+    "                const REAL F0B1_r = sqrtgammaDET*(v_rU0*B_rU1 - v_rU1*B_rU0);\n",
+    "                const REAL F0B1_l = sqrtgammaDET*(v_lU0*B_lU1 - v_lU1*B_lU0);\n",
     "\n",
     "                // Compute the state vector for these terms:\n",
     "                const REAL U_r = B_rflux_dirn;\n",
@@ -578,9 +584,9 @@
     "\n",
     "                REAL cmin,cmax;\n",
     "                // Basic HLLE solver:\n",
-    "                find_cmax_cmin(gamma_faceDD00[index],gamma_faceDD01[index],gamma_faceDD02[index],\n",
-    "                               gamma_faceDD11[index],gamma_faceDD12[index],gamma_faceDD22[index],\n",
-    "                               beta_faceU0[index],alpha[index],flux_dirn,\n",
+    "                find_cmax_cmin(gxx,gxy,gxz,\n",
+    "                               gyy,gyz,gzz,\n",
+    "                               betaU0,alpha,flux_dirn,\n",
     "                               &cmax, &cmin);\n",
     "                const REAL FHLL_0B1 = HLLE_solve(F0B1_r, F0B1_l, U_r, U_l, cmin, cmax);\n"
    ]
@@ -612,8 +618,8 @@
     "                // ************************************\n",
     "                // REPEAT ABOVE, but at point i+1\n",
     "                // Calculate the flux vector on each face for each component of the E-field:\n",
-    "                const REAL F0B1_r_p1 = sqrtgammaDET_p1*(Valenciav_rU0_p1*B_rU1_p1 - Valenciav_rU1_p1*B_rU0_p1);\n",
-    "                const REAL F0B1_l_p1 = sqrtgammaDET_p1*(Valenciav_lU0_p1*B_lU1_p1 - Valenciav_lU1_p1*B_lU0_p1);\n",
+    "                const REAL F0B1_r_p1 = sqrtgammaDET_p1*(v_rU0_p1*B_rU1_p1 - v_rU1_p1*B_rU0_p1);\n",
+    "                const REAL F0B1_l_p1 = sqrtgammaDET_p1*(v_lU0_p1*B_lU1_p1 - v_lU1_p1*B_lU0_p1);\n",
     "\n",
     "                // Compute the state vector for this flux direction\n",
     "                const REAL U_r_p1 = B_rflux_dirn_p1;\n",
@@ -621,9 +627,9 @@
     "                //const REAL U_r_p1 = B_rU1_p1;\n",
     "                //const REAL U_l_p1 = B_lU1_p1;\n",
     "                // Basic HLLE solver, but at the next point:\n",
-    "                find_cmax_cmin(gamma_faceDD00[indexp1],gamma_faceDD01[indexp1],gamma_faceDD02[indexp1],\n",
-    "                               gamma_faceDD11[indexp1],gamma_faceDD12[indexp1],gamma_faceDD22[indexp1],\n",
-    "                               beta_faceU0[indexp1],alpha[indexp1],flux_dirn,\n",
+    "                find_cmax_cmin(gxx_p1,gxy_p1,gxz_p1,\n",
+    "                               gyy_p1,gyz_p1,gzz_p1,\n",
+    "                               betaU0_p1,alpha_p1,flux_dirn,\n",
     "                               &cmax, &cmin);\n",
     "                const REAL FHLL_0B1p1 = HLLE_solve(F0B1_r_p1, F0B1_l_p1, U_r_p1, U_l_p1, cmin, cmax);\n",
     "                // ************************************\n",
@@ -763,44 +769,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In file included from Validation/Afield_flux_unit_test.c:86:0:\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h: In function 'calculate_E_field_flat_all_in_one':\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:105:28: error: redefinition of 'gxx'\n",
-      "                 const REAL gxx = gamma_faceDD00[indexp1];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:75:28: note: previous definition of 'gxx' was here\n",
-      "                 const REAL gxx = gamma_faceDD00[index];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:106:28: error: redefinition of 'gxy'\n",
-      "                 const REAL gxy = gamma_faceDD01[indexp1];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:76:28: note: previous definition of 'gxy' was here\n",
-      "                 const REAL gxy = gamma_faceDD01[index];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:107:28: error: redefinition of 'gxz'\n",
-      "                 const REAL gxz = gamma_faceDD02[indexp1];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:77:28: note: previous definition of 'gxz' was here\n",
-      "                 const REAL gxz = gamma_faceDD02[index];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:108:28: error: redefinition of 'gyy'\n",
-      "                 const REAL gyy = gamma_faceDD11[indexp1];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:78:28: note: previous definition of 'gyy' was here\n",
-      "                 const REAL gyy = gamma_faceDD11[index];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:109:28: error: redefinition of 'gyz'\n",
-      "                 const REAL gyz = gamma_faceDD12[indexp1];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:79:28: note: previous definition of 'gyz' was here\n",
-      "                 const REAL gyz = gamma_faceDD12[index];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:110:28: error: redefinition of 'gzz'\n",
-      "                 const REAL gzz = gamma_faceDD22[indexp1];\n",
-      "                            ^~~\n",
-      "Validation/RHSs/calculate_E_field_flat_all_in_one.h:80:28: note: previous definition of 'gzz' was here\n",
-      "                 const REAL gzz = gamma_faceDD22[index];\n",
-      "                            ^~~\n",
       "pdflatex: security risk: running with elevated privileges\n",
       "pdflatex: security risk: running with elevated privileges\n",
       "pdflatex: security risk: running with elevated privileges\n",
