latex_parser.py: added constant support (config)
- fixed issue with product rule expansion and improved tensor structure
- changed UU metric determinant to use reciprocal of DD metric

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -263,7 +263,9 @@
     "\n",
     "In the following section, we demonstrate the current parser support for tensor notation using the Einstein summation convention. The first example will parse an equation for a tensor contraction, the second will parse an equation for raising an index using the metric tensor, and the third will parse an align enviroment with an equation dependency. In each example, every tensor should appear either on the LHS of an equation or inside of a configuration before appearing on the RHS of an equation. Moreover, the parser will raise an exception upon violation of the Einstein summation convention, i.e. an invalid free or bound index.\n",
     "\n",
-    "**Configuration** `'%' { <VARIABLE> }+ '[' <INTEGER> ']' ':' <SYMMETRY> { ',' { <VARIABLE> }+ '[' <INTEGER> ']' ':' <SYMMETRY> }*`"
+    "**Configuration Syntax**\n",
+    "\n",
+    "`'%' { <VARIABLE> }+ [ '[' <INTEGER> ']' ] ':' <SYMMETRY> { ',' { <VARIABLE> }+ [ '[' <INTEGER> ']' ] ':' <SYMMETRY> }*`"
    ]
   },
   {
@@ -566,7 +568,7 @@
     {
      "data": {
       "text/plain": [
-       "['gDD', 'gdet', 'gUU', 'deltaUU']"
+       "['gDD', 'gdet', 'gUU', 'deltaUU', 'r_s', 'r', 'theta']"
       ]
      },
      "execution_count": 18,
@@ -622,7 +624,16 @@
     {
      "data": {
       "text/plain": [
-       "['FUU', 'FUU_dD', 'gDD', 'gdet', 'gUU', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU']"
+       "['FUU',\n",
+       " 'k',\n",
+       " 'FUU_dD',\n",
+       " 'gDD',\n",
+       " 'gdet',\n",
+       " 'gUU',\n",
+       " 'gDD_dD',\n",
+       " 'GammaUDD',\n",
+       " 'FUU_cdD',\n",
+       " 'JU']"
       ]
      },
      "execution_count": 20,
@@ -632,7 +643,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % FUU [4]: anti01;\n",
+    "    % FUU [4]: anti01, k: const;\n",
     "    J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
     "\"\"\", evaluate=False)"
    ]
