Tutorial-LaTeX_SymPy_Conversion.ipynb: updated notebook

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -610,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 6 (Covariant Derivative)\n",
+    "#### Example 6.1 (Covariant Derivative)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu} $$"
@@ -686,8 +686,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example 6.2 (Diacritic Support)\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre lang=\"latex\"> J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu} </pre> | $$ J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu} $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FUU',\n",
+       " 'k',\n",
+       " 'FUU_dD',\n",
+       " 'ghatDD',\n",
+       " 'ghatdet',\n",
+       " 'ghatUU',\n",
+       " 'ghatDD_dD',\n",
+       " 'GammahatUDD',\n",
+       " 'FUU_cdhatD',\n",
+       " 'JU']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse(r\"\"\"\n",
+    "    % FUU [4]: anti01, k: const;\n",
+    "    J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
