latex_parser.py: added macro support
- restructured <CONFIG> grammar for macro support
- added support for <DEFINE> macro and <PARSE> macro
- added static method ignore_override() for warning control
- fixed issue preventing greek letter inside mathop command
- updated notebook and unit testing

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -52,6 +52,7 @@
     "```\n",
     "<ROOT>          -> <STRUCTURE> { <LINE_BREAK> <STRUCTURE> }*\n",
     "<STRUCTURE>     -> <CONFIG> | <ENVIRONMENT> | <ASSIGNMENT>\n",
+    "<CONFIG>        -> '%' ( <DEFINE> | <EVAL> | <PARSE> | <REDEF> )\n",
     "<ENVIRONMENT>   -> <BEGIN_ALIGN> <ASSIGNMENT> { <LINE_BREAK> <ASSIGNMENT> }* <END_ALIGN>\n",
     "<ASSIGNMENT>    -> ( <TENSOR> | <COVDRV> ) = <EXPRESSION>\n",
     "<EXPRESSION>    -> <TERM> { ( '+' | '-' ) <TERM> }*\n",
@@ -232,8 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from warnings import filterwarnings # Import Python function for warning suppression\n",
-    "filterwarnings('ignore', category=OverrideWarning); Parser.namespace.clear()"
+    "Parser.ignore_override(); Parser.namespace.clear()"
    ]
   },
   {
@@ -263,9 +263,11 @@
     "\n",
     "In the following section, we demonstrate the current parser support for tensor notation using the Einstein summation convention. The first example will parse an equation for a tensor contraction, the second will parse an equation for raising an index using the metric tensor, and the third will parse an align enviroment with an equation dependency. In each example, every tensor should appear either on the LHS of an equation or inside of a configuration before appearing on the RHS of an equation. Moreover, the parser will raise an exception upon violation of the Einstein summation convention, i.e. an invalid free or bound index.\n",
     "\n",
-    "**Configuration Syntax**\n",
+    "**Grammar for the Define Macro**\n",
     "\n",
-    "`'%' { <VARIABLE> }+ [ '[' <INTEGER> ']' ] ':' <SYMMETRY> { ',' { <VARIABLE> }+ [ '[' <INTEGER> ']' ] ':' <SYMMETRY> }*`"
+    "```\n",
+    "'def' [ <SYMMETRY> ] { <SYMBOL> }+ [ '(' <INTEGER> ')' ] { ',' [ <SYMMETRY> ] { <SYMBOL> }+ [ '(' <INTEGER> ')' ] }*\n",
+    "```"
    ]
   },
   {
@@ -296,7 +298,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % hUD [4]: nosym;\n",
+    "    % def nosym hUD (4);\n",
     "    h = h^\\mu{}_\\mu\n",
     "\"\"\")"
    ]
@@ -346,7 +348,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % gUU [3]: metric, vD [3]: nosym;\n",
+    "    % def metric gUU (3), vD (3);\n",
     "    v^\\mu = g^{\\mu\\nu} v_\\nu\n",
     "\"\"\")"
    ]
@@ -396,7 +398,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % gDD [2]: metric, RUU [2]: sym01;\n",
+    "    % def metric gDD (2), sym01 RUU (2);\n",
     "    \\begin{align*}\n",
     "        R &= g_{ab} R^{ab} \\\\\n",
     "        G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R\n",
@@ -473,7 +475,8 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % epsilonDDD [3]: permutation, vU [3]: nosym, wU [3]: nosym;\n",
+    "    % def permutation epsilonDDD (3);\n",
+    "    % def vU (3), wU (3);\n",
     "    u_i = \\epsilon_{ijk} v^j w^k\n",
     "\"\"\")"
    ]
@@ -557,53 +560,36 @@
     "#### Example 5 (Schwarzschild Metric)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; g^{\\mu\\nu} &= \\delta^{\\mu\\nu} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{2 2} &= r^{{2}} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{3 3} &= r^{{2}} \\sin^2(\\theta) <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} g^{\\mu\\nu} &= \\delta^{\\mu\\nu} \\\\ g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\ g^{1 1} &= \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\ g^{2 2} &= r^{{2}} \\\\ g^{3 3} &= r^{{2}} \\sin^2(\\theta) \\end{align*} $$"
+    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{2 2} &= r^{{2}} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{3 3} &= r^{{2}} \\sin^2(\\theta) <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\ g^{1 1} &= \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\ g^{2 2} &= r^{{2}} \\\\ g^{3 3} &= r^{{2}} \\sin^2(\\theta) \\end{align*} $$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['gDD', 'gdet', 'gUU', 'deltaUU', 'r_s', 'r', 'theta']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parse(r\"\"\"\n",
-    "    % gUU [4]: metric, deltaUU [4]: kronecker;\n",
-    "    \\begin{align*}\n",
-    "        g^{\\mu\\nu} &= \\delta^{\\mu\\nu} \\\\\n",
-    "        g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\n",
-    "        g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\n",
-    "        g^{2 2} &= r^{{2}} \\\\\n",
-    "        g^{3 3} &= r^{{2}} \\sin^2(\\theta)\n",
-    "    \\end{align*}\n",
-    "\"\"\")"
+    "# parse(r\"\"\"\n",
+    "#     % def metric gUU [4], kronecker deltaUU [4];\n",
+    "#     % parse g^{\\mu\\nu} = \\delta^{\\mu\\nu};\n",
+    "#     \\begin{align*}\n",
+    "#         g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\n",
+    "#         g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\n",
+    "#         g^{2 2} &= r^{{2}} \\\\\n",
+    "#         g^{3 3} &= r^{{2}} \\sin^2(\\theta)\n",
+    "#     \\end{align*};\n",
+    "#     % eval gUU;\n",
+    "#     % redef metric gUU\n",
+    "# \"\"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gUU = [[-1 + r_s/r, 0, 0, 0], [0, 1/(1 - r_s/r), 0, 0], [0, 0, r**2, 0], [0, 0, 0, r**2*sin(theta)**2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('gUU =', gUU)"
+    "# print('gUU =', gUU)"
    ]
   },
   {
@@ -643,7 +629,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % FUU [4]: anti01, k: const;\n",
+    "    % def anti01 FUU (4), const k;\n",
     "    J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
     "\"\"\", evaluate=False)"
    ]
@@ -722,9 +708,9 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % FUU [4]: anti01, k: const;\n",
+    "    % def anti01 FUU (4), const k;\n",
     "    J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
-    "\"\"\")"
+    "\"\"\", evaluate=False)"
    ]
   },
   {
