--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -502,7 +502,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The static variable `namespace` for the `Parser` class will provide access to the global namespace of the parser across each instance of the class."
+    "#### Example 5 (Schwarzschild Metric)\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{2 2} &= r^{{2}} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{3 3} &= r^{{2}} \\sin^2(\\theta) <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\ g^{1 1} &= \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\ g^{2 2} &= r^{{2}} \\\\ g^{3 3} &= r^{{2}} \\sin^2(\\theta) \\end{align*} $$"
    ]
   },
   {
@@ -513,35 +516,7 @@
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('hUD',\n",
-       "              [[hUD00, hUD01, hUD02, hUD03],\n",
-       "               [hUD10, hUD11, hUD12, hUD13],\n",
-       "               [hUD20, hUD21, hUD22, hUD23],\n",
-       "               [hUD30, hUD31, hUD32, hUD33]]),\n",
-       "             ('h', hUD00 + hUD11 + hUD22 + hUD33),\n",
-       "             ('gDD', [[gDD00, gDD01], [gDD01, gDD11]]),\n",
-       "             ('gdet', gDD00*gDD11 - gDD01**2),\n",
-       "             ('gUU',\n",
-       "              [[gDD11/(gDD00*gDD11 - gDD01**2),\n",
-       "                -gDD01/(gDD00*gDD11 - gDD01**2)],\n",
-       "               [-gDD01/(gDD00*gDD11 - gDD01**2),\n",
-       "                gDD00/(gDD00*gDD11 - gDD01**2)]]),\n",
-       "             ('vD', [vD0, vD1, vD2]),\n",
-       "             ('vU', [vU0, vU1, vU2]),\n",
-       "             ('RUU', [[RUU00, RUU01], [RUU01, RUU11]]),\n",
-       "             ('R', RUU00*gDD00 + 2*RUU01*gDD01 + RUU11*gDD11),\n",
-       "             ('GUU',\n",
-       "              [[RUU00 + gDD11*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2)),\n",
-       "                RUU01 - gDD01*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))],\n",
-       "               [RUU01 - gDD01*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2)),\n",
-       "                RUU11 + gDD00*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))]]),\n",
-       "             ('epsilonDDD',\n",
-       "              [[[0, 0, 0], [0, 0, 1], [0, -1, 0]],\n",
-       "               [[0, 0, -1], [0, 0, 0], [1, 0, 0]],\n",
-       "               [[0, 1, 0], [-1, 0, 0], [0, 0, 0]]]),\n",
-       "             ('wU', [wU0, wU1, wU2]),\n",
-       "             ('uD',\n",
-       "              [vU1*wU2 - vU2*wU1, -vU0*wU2 + vU2*wU0, vU0*wU1 - vU1*wU0])])"
+       "['gUU', 'gdet', 'gDD', 'deltaDD', 'G', 'M', 'r', 'theta', 'GammaUDD']"
       ]
      },
      "execution_count": 17,
@@ -550,17 +525,20 @@
     }
    ],
    "source": [
-    "Parser.namespace"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Example 5 (Schwarzschild Metric)\n",
-    "LaTeX Source | Rendered LaTeX\n",
-    ":----------- | :-------------\n",
-    "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{2 2} &= r^{{2}} \\\\\\\\ <br>&emsp;&emsp;&emsp; g^{3 3} &= r^{{2}} \\sin^2(\\theta) <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\ g^{1 1} &= \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\ g^{2 2} &= r^{{2}} \\\\ g^{3 3} &= r^{{2}} \\sin^2(\\theta) \\end{align*} $$"
+    "parse(r\"\"\"\n",
+    "    % define basis [t, r, \\theta, \\phi];\n",
+    "    % define metric gDD (4), kronecker deltaDD (4);\n",
+    "    % define const G, const M;\n",
+    "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
+    "    \\begin{align*}\n",
+    "        g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
+    "        g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
+    "        g_{2 2} &= r^{{2}} \\\\\n",
+    "        g_{3 3} &= r^{{2}} \\sin^2(\\theta)\n",
+    "    \\end{align*}\n",
+    "    % update metric gDD;\n",
+    "    % parse \\Gamma^a_{b c} = \\Gamma^a_{b c}\n",
+    "\"\"\")"
    ]
   },
   {
@@ -570,27 +548,23 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{2 G M}{r} - 1 & 0 & 0 & 0\\\\0 & \\frac{1}{- \\frac{2 G M}{r} + 1} & 0 & 0\\\\0 & 0 & r^{2} & 0\\\\0 & 0 & 0 & r^{2} \\sin^{2}{\\left(\\theta \\right)}\\end{matrix}\\right]$"
+      ],
       "text/plain": [
-       "['gDD', 'gdet', 'gUU', 'deltaUU', 'r_s', 'r', 'theta']"
+       "Matrix([\n",
+       "[2*G*M/r - 1,                0,    0,                  0],\n",
+       "[          0, 1/(-2*G*M/r + 1),    0,                  0],\n",
+       "[          0,                0, r**2,                  0],\n",
+       "[          0,                0,    0, r**2*sin(theta)**2]])"
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "parse(r\"\"\"\n",
-    "    % define metric gUU (4), kronecker deltaUU (4);\n",
-    "    % parse g^{\\mu\\nu} = \\delta^{\\mu\\nu};\n",
-    "    \\begin{align*}\n",
-    "        g^{0 0} &= -\\left(1 - \\frac{\\mathop{r_s}}{r}\\right) \\\\\n",
-    "        g^{1 1} &=  \\left(1 - \\frac{\\mathop{r_s}}{r}\\right)^{-1} \\\\\n",
-    "        g^{2 2} &= r^{{2}} \\\\\n",
-    "        g^{3 3} &= r^{{2}} \\sin^2(\\theta)\n",
-    "    \\end{align*}\n",
-    "    % update metric gUU\n",
-    "\"\"\")"
+    "display(sp.Matrix(gDD))"
    ]
   },
   {
@@ -599,15 +573,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gUU = [[-1 + r_s/r, 0, 0, 0], [0, 1/(1 - r_s/r), 0, 0], [0, 0, r**2, 0], [0, 0, 0, r**2*sin(theta)**2]]\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0 & - \\frac{G M}{r^{2} \\left(\\frac{2 G M}{r} - 1\\right)} & 0 & 0\\\\- \\frac{G M}{r^{2} \\left(\\frac{2 G M}{r} - 1\\right)} & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[                        0, -G*M/(r**2*(2*G*M/r - 1)), 0, 0],\n",
+       "[-G*M/(r**2*(2*G*M/r - 1)),                         0, 0, 0],\n",
+       "[                        0,                         0, 0, 0],\n",
+       "[                        0,                         0, 0, 0]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print('gUU =', gUU)"
+    "display(sp.Matrix(GammaUDD[0][:][:]))"
    ]
   },
   {
@@ -616,15 +599,76 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gdet = -1/(r**4*sin(theta)**2)\n"
-     ]
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{G M \\left(\\frac{2 G M}{r} - 1\\right)}{r^{2}} & 0 & 0 & 0\\\\0 & - \\frac{2 G M}{r^{2} \\left(- \\frac{2 G M}{r} + 1\\right)} - \\frac{G M \\left(\\frac{2 G M}{r} - 1\\right)}{r^{2} \\left(- \\frac{2 G M}{r} + 1\\right)^{2}} & 0 & 0\\\\0 & 0 & r \\left(\\frac{2 G M}{r} - 1\\right) & 0\\\\0 & 0 & 0 & r \\left(\\frac{2 G M}{r} - 1\\right) \\sin^{2}{\\left(\\theta \\right)}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-G*M*(2*G*M/r - 1)/r**2,                                                                         0,               0,                             0],\n",
+       "[                      0, -2*G*M/(r**2*(-2*G*M/r + 1)) - G*M*(2*G*M/r - 1)/(r**2*(-2*G*M/r + 1)**2),               0,                             0],\n",
+       "[                      0,                                                                         0, r*(2*G*M/r - 1),                             0],\n",
+       "[                      0,                                                                         0,               0, r*(2*G*M/r - 1)*sin(theta)**2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print('gdet =', sp.simplify(gdet))"
+    "display(sp.Matrix(GammaUDD[1][:][:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & \\frac{1}{r} & 0\\\\0 & \\frac{1}{r} & 0 & 0\\\\0 & 0 & 0 & - \\sin{\\left(\\theta \\right)} \\cos{\\left(\\theta \\right)}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[0,   0,   0,                      0],\n",
+       "[0,   0, 1/r,                      0],\n",
+       "[0, 1/r,   0,                      0],\n",
+       "[0,   0,   0, -sin(theta)*cos(theta)]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(sp.Matrix(GammaUDD[2][:][:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0 & 0 & 0 & 0\\\\0 & 0 & 0 & \\frac{1}{r}\\\\0 & 0 & 0 & \\frac{\\cos{\\left(\\theta \\right)}}{\\sin{\\left(\\theta \\right)}}\\\\0 & \\frac{1}{r} & \\frac{\\cos{\\left(\\theta \\right)}}{\\sin{\\left(\\theta \\right)}} & 0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[0,   0,                     0,                     0],\n",
+       "[0,   0,                     0,                   1/r],\n",
+       "[0,   0,                     0, cos(theta)/sin(theta)],\n",
+       "[0, 1/r, cos(theta)/sin(theta),                     0]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(sp.Matrix(GammaUDD[3][:][:]))"
    ]
   },
   {
@@ -653,22 +697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FUU', 'k', 'FUU_dD', 'gDD', 'gdet', 'gUU', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(parse(r\"\"\"\n",
-    "    % define anti01 FUU (4), const k;\n",
-    "    J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
-    "\"\"\"))"
+    "# parse(r\"\"\"\n",
+    "#     % define anti01 FUU (4), const k;\n",
+    "#     J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
+    "# \"\"\")"
    ]
   },
   {
@@ -683,31 +719,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FUU', 'k', 'FUU_dD', 'ghatDD', 'ghatdet', 'ghatUU', 'ghatDD_dD', 'GammahatUDD', 'FUU_cdhatD', 'JU']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(parse(r\"\"\"\n",
-    "    % define anti01 FUU (4), const k;\n",
-    "    J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
-    "\"\"\"))"
+    "# parse(r\"\"\"\n",
+    "#     % define anti01 FUU (4), const k;\n",
+    "#     J^\\mu = (4\\pi k)^{-1} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
+    "# \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The static variable `namespace` for the `Parser` class will provide access to the global namespace of the parser across each instance of the class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: outputC (disable verbose)"
+    "# Parser.namespace # uncomment and run cell"
    ]
   },
   {
@@ -719,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,12 +792,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_SymPy_Conversion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Derivative(x**2 + 2*x, x) -> 2*x + 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from latex_parser import *\n",
+    "expr = parse_expr(r'\\partial_x (x^{{2}} + 2x)')\n",
+    "print(expr, '->', expr.doit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-(2*x + 2)/x**2, 0], [-y/(2*x**(5/2)), -1/x**(3/2)]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from latex_parser import *\n",
+    "Parser.ignore_override()\n",
+    "parse(r\"\"\"\n",
+    "    % define basis [x, y];\n",
+    "    % define vD (2);\n",
+    "    v_0 = x^{{2}} + 2x;\n",
+    "    v_1 = y\\sqrt{x};\n",
+    "    T_{\\mu\\nu} = (\\partial_\\nu v_\\mu)\\,\\partial^2_x (\\ln(x))\n",
+    "\"\"\")\n",
+    "TDD"
    ]
   }
  ],
